--- a/index.html
+++ b/index.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea HOuse</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tea HOuse</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- icon -->
+  <script src="https://kit.fontawesome.com/5358a14a1d.js" crossorigin="anonymous"></script>
+  <!-- Manroope Google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
+  <style>
+    .font_manroope {
+      font-family: 'Manrope', sans-serif;
+    }
+  </style>
+
 </head>
-<body>
-    
+
+<body class="font_manroope">
+  <header class="container mx-auto">
+    <div class="hero min-h-screen y-20">
+      <div class="hero-content flex-col lg:flex-row">
+        <div>
+          <h1 class="text-7xl font-extrabold">
+            It's good <br>
+            tea time at The <br>
+            Tea House
+          </h1>
+          <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum<br> Satisfaction To Your Taste Buds.</p>
+          <button class="btn btn-primary text-white">Explore More</button>
+        </div>
+        <div>
+          <img src="/images/banner.png" class="max-w-sm" />
+          <!-- ratings badge -->
+          <div class="-mt-16 flex items-center gap-5 drop-shadow-xl bg-white p-6 w-60">
+            <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+            <div>
+              <h3 class="text-3xl">5.00</h3>
+              <p>Trust Pilot Ratings</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main class="container mx-auto">
+    <!-- features sections -->
+    <section class="text-center my-24">
+      <h3 class="text-5xl font-extrabold mb-5">
+        Our Featured Products
+      </h3>
+      <p class="lg:max-w-4xl mx-auto">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        some form, by injected humour, or randomised words which don't look even slightly believable.
+      </p>
+      <!-- featured tea card container -->
+      <div class="grid gap-5 my-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <!-- first card -->
+        <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-9">
+          <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+          <div class="card-body justify-center">
+            <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- second card -->
+        <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-9">
+          <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+          <div class="card-body justify-center">
+            <h2 class="text-2xl font-extrabold">Black Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- third card -->
+        <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-9">
+          <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+          <div class="card-body justify-center">
+            <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- fourth card -->
+        <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-9">
+          <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+          <div class="card-body justify-center">
+            <h2 class="text-2xl font-extrabold">Green Tea</h2>
+            <p>Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
